pull quote component completed

--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -139,5 +139,11 @@
     <div class="paragraph-widget paragraph-widget--external-news-story">
       {% include "@external-news-story" with external_news_story %}
     </div>
+    <div class="paragraph-widget paragraph-widget--pull-quote">
+      {% include "@pull-quote" with pull_quote_no_author %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--pull-quote">
+      {% include "@pull-quote" with pull_quote_with_author %}
+    </div>
   </div>
 </section>
