--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -145,5 +145,37 @@
     <div class="paragraph-widget paragraph-widget--pull-quote">
       {% include "@pull-quote" with pull_quote_with_author %}
     </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
+        <h2>3 Cards—with Images and Links</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--card-set">
+      {% include "@card-set" with card_set_three_links %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
+        <h2>6 Cards—with Images and Links</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--card-set">
+      {% include "@card-set" with card_set_six %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
+        <h2>3 Cards—with Images</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--card-set">
+      {% include "@card-set" with card_set_three_no_links %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
+        <h2>3 Cards—no Images and Links</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--card-set">
+      {% include "@card-set" with card_set_three_links_no_images %}
+    </div>
   </div>
 </section>
