--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -35,6 +35,7 @@
 @import "../components/breadcrumb/breadcrumb";
 @import "../components/carousel/carousel";
 @import "../components/card/card";
+@import "../components/card-set/card-set";
 @import "../components/pull-quote/pull-quote";
 @import "../components/hero/hero";
 @import "../components/external-news-story/external-news-story";
