--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -177,5 +177,11 @@
     <div class="paragraph-widget paragraph-widget--card-set">
       {% include "@card-set" with card_set_three_links_no_images %}
     </div>
+    <div class="paragraph-widget paragraph-widget--feature-with-large-image">
+      {% include "@feature-with-large-image" with feature_with_large_image %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--callout-inset">
+      {% include "@callout-inset" with callout_inset %}
+    </div>
   </div>
 </section>
