--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -38,6 +38,8 @@
 @import "../components/card-set/card-set";
 @import "../components/pull-quote/pull-quote";
 @import "../components/hero/hero";
+@import "../components/feature-with-large-image/feature-with-large-image";
+@import "../components/callout-inset/callout-inset";
 @import "../components/external-news-story/external-news-story";
 @import "../components/share/share";
 @import "../components/video-embed/video-embed";
