--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -183,5 +183,8 @@
     <div class="paragraph-widget paragraph-widget--callout-inset">
       {% include "@callout-inset" with callout_inset %}
     </div>
+    <div class="paragraph-widget paragraph-widget--call-to-action--small">
+      {% include "@call-to-action--small" with call_to_action_small %}
+    </div>
   </div>
 </section>
