--- a/src/components/call-to-action/call-to-action--large.twig
+++ b/src/components/call-to-action/call-to-action--large.twig
@@ -1,1 +1,10 @@
-<div class="call-to-action call-to-action--large"></div>
+<div class="call-to-action call-to-action--large">
+  <div class="call-to-action__media">
+    <img src="{{ image|path }}" alt="" />
+  </div>
+  <div class="call-to-action__copy-wrap">
+    <h2 class="call-to-action__headline">{{title}}</h2>
+    <div>{{body|raw}}</div>
+    {% include "@button-set" with button_set %}
+  </div>
+</div>
