--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -186,5 +186,8 @@
     <div class="paragraph-widget paragraph-widget--call-to-action--small">
       {% include "@call-to-action--small" with call_to_action_small %}
     </div>
+    <div class="paragraph-widget paragraph-widget--call-to-action--large">
+      {% include "@call-to-action--large" with call_to_action_large %}
+    </div>
   </div>
 </section>
