--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -54,6 +54,7 @@
 @import "../components/blockquote/blockquote";
 @import "../components/iframe/iframe";
 @import "../components/modal/modal";
+@import "../components/site-footer/site-footer";
 @import "../components/callout/callout";
 @import "../components/callout-with-image/callout-with-image";
 @import "../components/callout-with-image-small-set/callout-with-image-small-set";
