--- a/src/components/_page-preview.twig
+++ b/src/components/_page-preview.twig
@@ -20,8 +20,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <a class="skip-link" href="#main-content">Skip To Main Content</a>
         <div class="max-bound">
+          <main id="main-content">
             {{ yield }}
+          </main>
+          {% include "@site-footer" with footer %}
         </div>
         {% render "@privacy-consent" %}
         <script src="{{ '/js/index.js'|path }}"></script>
