full width image component setup, sub nav started

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -44,6 +44,8 @@
 @import "../components/share/share";
 @import "../components/video-embed/video-embed";
 @import "../components/table/table";
+@import "../components/subnav/subnav";
+@import "../components/full-width-image/full-width-image";
 @import "../components/call-to-action/call-to-action";
 @import "../components/image-grid/image-grid";
 @import "../components/image-grid-with-text/image-grid-with-text";
