--- a/src/components/video-embed/_video-embed.scss
+++ b/src/components/video-embed/_video-embed.scss
@@ -3,12 +3,26 @@
 }
 
 .video-embed__media-wrap {
+  z-index: 1;
   @extend %responsive-img;
 
   &:before {
     padding-top: 56.125%;
   }
-
+  // yellow square for hover
+  &:after {
+    content: "";
+    background-color: $yellow;
+    position: absolute;
+    top: rem(-8);
+    bottom: rem(-8);
+    pointer-events: none;
+    left: rem(-8);
+    right: rem(-8);
+    transition: 0.2s opacity ease-in-out;
+    opacity: 0;
+    z-index: -1;
+  }
   img {
     transition: 0.2s opacity ease-in-out;
   }
@@ -33,15 +47,22 @@
     .video-embed__button {
       opacity: 0;
     }
+    .video-embed__video {
+      pointer-events: all;
+    }
+  }
+  &.video-embed__video-hover {
+    &:after {
+      opacity: 1;
+    }
   }
 }
 
+.video-embed__video {
+  pointer-events: none;
+}
+
 .video-embed__button {
-  background-image: url("data:image/svg+xml,%3Csvg width='82' height='82' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg opacity='.377' fill='%23FFF' fill-rule='nonzero' transform='translate(1 1)'%3E%3Ccircle cx='40' cy='40' r='40'/%3E%3Cpath d='M40 0C17.909 0 0 17.909 0 40s17.909 40 40 40 40-17.909 40-40S62.091 0 40 0Zm0 1c21.54 0 39 17.46 39 39S61.54 79 40 79 1 61.54 1 40 18.46 1 40 1Z'/%3E%3C/g%3E%3Cpath d='M24 22.818h35V57.93H24z'/%3E%3Cpath d='m59.986 39.288-28.433-17.68c-2.073-1.363-3.767-.36-3.767 2.229V58.16c0 2.593 1.694 3.593 3.767 2.229l28.433-17.68c.565-.4.934-1.022 1.014-1.71a2.438 2.438 0 0 0-1.01-1.707l-.004-.004Z' fill='%23FFF' fill-rule='nonzero'/%3E%3C/g%3E%3C/svg%3E");
-  background-repeat: no-repeat no-repeat;
-  background-position: center center;
-  background-size: rem(60);
-  background-color: transparent;
   border: none;
   z-index: 5;
   cursor: pointer;
@@ -52,7 +73,9 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transition: 0.2s opacity ease-in-out, 0.2s transform ease-in-out;
+  background-color: rgba($white, 0.4);
+  border-radius: 50%;
+  transition: 0.2s background-color ease-in-out;
   @include media-breakpoint-up(lg) {
     width: rem(80);
     height: rem(80);
@@ -60,8 +83,49 @@
     margin-left: rem(-40);
   }
   &:hover {
-    transform: scale(1.1);
+    background-color: rgba($white, 1);
+    .video-embed__triangle {
+      background-color: $red2;
+    }
   }
+}
+
+.video-embed__triangle {
+  position: relative;
+  background-color: $white;
+  text-align: left;
+  transition: 0.2s background-color ease-in-out;
+  margin-left: rem(20);
+  @include media-breakpoint-up(lg) {
+    margin-left: rem(28);
+  }
+}
+.video-embed__triangle:before,
+.video-embed__triangle:after {
+  content: "";
+  position: absolute;
+  background-color: inherit;
+}
+.video-embed__triangle,
+.video-embed__triangle:before,
+.video-embed__triangle:after {
+  width: rem(17);
+  height: rem(17);
+  border-top-right-radius: 30%;
+  @include media-breakpoint-up(lg) {
+    width: rem(23);
+    height: rem(23);
+  }
+}
+
+.video-embed__triangle {
+  transform: rotate(30.5deg) skewX(-30deg) scale(1, 0.866);
+}
+.video-embed__triangle:before {
+  transform: rotate(-135deg) skewX(-45deg) scale(1.414, 0.707) translate(0, -50%);
+}
+.video-embed__triangle:after {
+  transform: rotate(135deg) skewY(-45deg) scale(0.707, 1.414) translate(50%);
 }
 
 .video-embed__caption {
