subnav component for kitchen sink complete

--- a/src/components/subnav/_subnav.scss
+++ b/src/components/subnav/_subnav.scss
@@ -1,18 +1,11 @@
 .subnav {
   position: relative;
-  .lw_separator_title {
-    display: block;
-    font-size: rem(14);
-    font-weight: 700;
-    letter-spacing: em(1.5, 14);
-    line-height: (19 / 14);
-    text-decoration: none;
-    text-transform: uppercase;
-  }
+  box-shadow: rem(9) rem(9) rem(20) rgba($black, 0.15);
 }
 
 .subnav__toggle {
   background-color: $red;
+  height: rem(66);
   color: $white;
   cursor: pointer;
   display: block;
@@ -21,29 +14,35 @@
   font-size: rem(18);
   font-weight: 700;
   line-height: (26 / 18);
-  padding: rem(16) rem(60) rem(10) rem(30);
+  padding: 0 rem(30);
   position: relative;
   text-align: left;
-  transition: 0.3s color ease-in-out;
+  transition: 0.2s color ease-in-out;
   width: 100%;
   @include media-breakpoint-up(lg) {
     display: none;
   }
-  .icon {
-    fill: currentColor;
+  &:before {
+    content: "";
     position: absolute;
-    top: 50%;
-    right: rem(30);
-    transform: translate3d(-50%, -45%, 0);
-    transition: 0.3s transform ease-in-out;
+    right: rem(20);
+    top: rem(25);
+    width: rem(10);
+    height: rem(10);
+    border-right: rem(2) solid $yellow;
+    border-bottom: rem(2) solid $yellow;
+    transform: rotate(45deg);
+    transform-origin: center;
+    transition: 0.2s transform ease-in-out, 0.2s top ease-in-out;
   }
   &:hover,
   .user-tabbing &:focus {
     color: $white;
   }
   &[aria-expanded="true"] {
-    .icon {
-      transform: translate3d(-50%, -50%, 0) rotate(180deg);
+    &:before {
+      transform: rotate(225deg);
+      top: rem(30);
     }
   }
 }
@@ -51,7 +50,168 @@
 .subnav__list {
   overflow: hidden;
   transition: 0.2s height ease-in-out;
+  background-color: $white;
   &[aria-hidden="true"] {
     height: 0;
+  }
+  &[aria-hidden="false"] {
+    padding-bottom: rem(20);
+  }
+  // sibling pages only
+  & > ul {
+    & > li {
+      padding: 0 rem(30);
+      a {
+        display: block;
+        font-family: $nimbus-sans-bold;
+        font-weight: 700;
+        font-size: rem(18);
+        line-height: (22 / 18);
+        color: $red2;
+        text-decoration: none;
+        padding: rem(15);
+        position: relative;
+        z-index: 1;
+        transition: 0.2s background-color ease-in-out, 0.2s color ease-in-out;
+        @include media-breakpoint-up(lg) {
+          font-size: rem(16);
+          line-height: (19 / 16);
+          padding-right: rem(25);
+        }
+        // current page and hover
+        &:hover,
+        &[aria-current="page"] {
+          background-color: $off-white;
+          color: $red;
+          @include media-breakpoint-up(lg) {
+            background-color: $white;
+          }
+          &:after {
+            opacity: 0;
+          }
+          &:before {
+            @include media-breakpoint-up(lg) {
+              opacity: 1;
+            }
+          }
+        }
+        &[aria-current="page"] {
+          pointer-events: none;
+        }
+        // border under each item
+        &:after {
+          content: "";
+          position: absolute;
+          bottom: rem(-1);
+          left: rem(14);
+          right: 0;
+          border-bottom: rem(1) solid $grey2;
+          transition: 0.2s opacity ease-in-out;
+          @include media-breakpoint-up(lg) {
+            right: rem(20);
+          }
+        }
+        // background color for desktop items
+        &:before {
+          @include media-breakpoint-up(lg) {
+            content: "";
+            background-color: $off-white;
+            position: absolute;
+            left: rem(-30);
+            right: rem(-30);
+            top: 0;
+            bottom: 0;
+            z-index: -1;
+            opacity: 0;
+            transition: 0.2s opacity ease-in-out;
+          }
+        }
+      }
+      // first child parent page
+      &:first-child {
+        @include media-breakpoint-up(lg) {
+          background-color: $red;
+        }
+        a {
+          @include media-breakpoint-up(lg) {
+            padding: rem(21) rem(15);
+            color: $white;
+            font-size: rem(18);
+            line-height: (25 / 18);
+          }
+          &:before {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: rem(21);
+            width: rem(9);
+            height: rem(9);
+            border-right: rem(2) solid $red2;
+            border-bottom: rem(2) solid $red2;
+            transform: rotate(135deg);
+            transform-origin: center;
+            transition: 0.2s left ease-in-out;
+            @include media-breakpoint-up(lg) {
+              border-color: $yellow;
+              top: rem(29);
+              opacity: 1;
+              background-color: transparent;
+            }
+          }
+          &::after {
+            @include media-breakpoint-up(lg) {
+              display: none;
+            }
+          }
+          &:hover {
+            @include media-breakpoint-up(lg) {
+              background-color: $red;
+            }
+            &:before {
+              @include media-breakpoint-up(lg) {
+                left: rem(-8);
+              }
+            }
+          }
+        }
+      }
+      // last child removing border
+      &:last-child {
+        a {
+          &:after {
+            display: none;
+          }
+        }
+      }
+      // child page ul hidden on mobile
+      > ul {
+        display: none;
+        @include media-breakpoint-up(lg) {
+          display: block;
+          margin-bottom: rem(10);
+        }
+        li {
+          a {
+            font-family: $nimbus-sans-regular;
+            font-weight: 400;
+            text-decoration: underline;
+            text-decoration-thickness: rem(1);
+            text-underline-offset: rem(1);
+            padding: rem(8) rem(17) rem(8) rem(30);
+            &:after {
+              display: none;
+            }
+          }
+          &:last-child {
+            a {
+              &:after {
+                display: block;
+                bottom: rem(-10);
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
