--- a/src/components/video-embed/_video-embed.scss
+++ b/src/components/video-embed/_video-embed.scss
@@ -129,6 +129,7 @@
 }
 
 .video-embed__caption {
+  margin-top: rem(10);
   @extend %caption;
   @include media-breakpoint-up(md) {
     padding-left: rem(53);
