--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -9,6 +9,7 @@ $off-white: #f5f5f5;
 $light-grey: #ebebeb;
 $dark-grey: #003d4c;
 $grey: #4a4a4a;
+$grey2: #e0e0e0;
 $black: #000000;
 $red: #c8102e;
 $red2: #7c2529;
