--- a/src/components/hero/hero--top-level-lp.twig
+++ b/src/components/hero/hero--top-level-lp.twig
@@ -9,6 +9,6 @@
   </div>
   {% endif %}
   <div class="hero__subnav-wrap">
-    {% include "@subnav--horizontal" with subnav %}
+    {% include "@subnav--horizontal" with subnav_horizontal %}
   </div>
 </div>
