--- a/src/components/subnav/subnav--horizontal.twig
+++ b/src/components/subnav/subnav--horizontal.twig
@@ -1,26 +1,11 @@
-{% macro menu_items(items, level = 0) %}
-  {% for item in items %}
-    <li>
-      {% if item.url %}
-        <a href="{{ item.url }}"{% if item.current %} aria-current="page"{% endif %}>{{ item.title }}</a>
-      {% else %}
-        <span class="lw_separator_title">{{ item.title }}</span>
-      {% endif %}
-      {% if (level == 0 or item.current) and item.children|length %}
-        <ul>
-          {{ _self.menu_items(item.children, level + 1) }}
-        </ul>
-      {% endif %}
-    </li>
-  {% endfor %}
-{% endmacro %}
-
-{% import _self as macros %}
-
 <nav class="subnav subnav--horizontal" aria-label="Sidebar">
   <div class="subnav__list" id="subnav-list">
     <ul>
-      {{ macros.menu_items(items) }}
+      {% for item in items %}
+      <li>
+        <a href="{{ item.url }}">{{ item.title }}</a>
+      </li>
+      {% endfor %}
     </ul>
   </div>
 </nav>
