updating page name for top level landing page, updated footer instagram logo

--- a/src/components/site-footer/site-footer.twig
+++ b/src/components/site-footer/site-footer.twig
@@ -12,7 +12,7 @@
         </li>
         <li>
           <a href="#" target="_blank">
-            <i class="fa-brands fa-instagram"></i>
+            <i class="fak fa-id5-instagram"></i>
             <span class="visible-for-screen-readers">Instagram</span>
           </a>
         </li>
