--- a/src/components/_page-preview.twig
+++ b/src/components/_page-preview.twig
@@ -22,6 +22,7 @@
     <body>
         <a class="skip-link" href="#main-content">Skip To Main Content</a>
         <div class="max-bound">
+          {# {% include "@site-header" with header %} #}
           <main id="main-content">
             {{ yield }}
           </main>
