--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -57,6 +57,7 @@
 @import "../components/iframe/iframe";
 @import "../components/modal/modal";
 @import "../components/site-footer/site-footer";
+@import "../components/site-header/site-header";
 @import "../components/callout/callout";
 @import "../components/callout-with-image/callout-with-image";
 @import "../components/callout-with-image-small-set/callout-with-image-small-set";
