--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -346,11 +346,10 @@
           background-color: transparent;
           margin-top: rem(24);
           padding: 0;
-          position: static;
-          transition: none;
-          @media (min-width: 1000px) and (max-height: 1000px) {
-            margin-top: rem(20);
-          }
+          position: relative;
+        }
+        &.mega-menu-desktop-dropdown-open {
+          height: initial;
         }
         li {
           margin-bottom: rem(10);
@@ -414,6 +413,9 @@
     text-decoration-color: $white;
     text-decoration-thickness: rem(1);
     text-underline-offset: rem(1);
+    @include media-breakpoint-up(lg) {
+      color: $red;
+    }
   }
 }
 
